infra-k8s/portfolio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio
  namespace: portfolio
  labels:
    app: portfolio
spec:
  selector:
    app: portfolio
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
